--- a/options.html
+++ b/options.html
@@ -62,6 +62,7 @@
                 </table>
             </div>
         </div>-->
+        <script src="lib/Platform.js"></script>
         <script src="lib/Options.js"></script>
         <script src="lib/UI%20Helper.js"></script>
         <script>
