--- a/background.html
+++ b/background.html
@@ -9,7 +9,7 @@
     <script src="lib/Options.js"></script>
     <script>
         "use strict";
-        /*global chrome, Options */
+        /*global Options, Platform */
 
         Options.setDefaults({
             "popup.bubble": false,
