--- a/lib/remove.html
+++ b/lib/remove.html
@@ -7,7 +7,7 @@
     <script src="lib/Platform.js"></script>
     <script>
         "use strict";
-        /*global chrome */
+        /*global Platform */
 
         Platform.tabs.getSelected(null, function (tab) {
             Platform.tabs.remove(tab.id);
