More work on issue 5. The basic ability to undo is done, but there is still much work to do.

--- a/lib/remove.html
+++ b/lib/remove.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>Remover Page</title>
 
-    <script src="lib/Platform.js"></script>
+    <script src="Platform.js"></script>
     <script>
         "use strict";
         /*global Platform */
