--- a/options.html
+++ b/options.html
@@ -97,11 +97,11 @@
                         container.input("text", {
                             option: "popup.hotkey.letter",
                             maxlength: 1,
-                            width: "2em"
-                        }).addEventListener("change", function (event) {
-                            this.value = this.value.toUpperCase();
-                            Options.set("popup.hotkey.letter", this.value);
-                        }, true);
+                            width: "2em",
+                            modify: function () {
+                                return this.value.toUpperCase();
+                            }
+                        });
                     });
 
 //                    container.seperator();
@@ -203,14 +203,24 @@
                 container.addCategory("Popup", function (container) {
                     var height = 375;
 
-                    container.input("checkbox", {
-                        option: "popup.bubble",
-                        text: "Show popup in a bubble (some things may be broken)"
+                    container.input("dropdown-list", {
+                        option: "popup.type",
+                        text: "Display in a...",
+                        list: [{
+                            value: "popup",
+                            text: "popup"
+                        }, {
+                            value: "bubble",
+                            text: "bubble"
+                        }, {
+                            value: "tab",
+                            text: "tab"
+                        }]
                     });
 
                     //container.space({ height: "5px" });
                     container.seperator();
-                    container.space({ height: "10px" });
+                    container.space({ height: "8px" });
 
                     container["DOM.Element"].appendChild(UI.create("table", function (element) {
                         element.style.backgroundColor = "slategray";
@@ -301,7 +311,7 @@
 
                     container["DOM.Element"].appendChild(UI.create("table", function (element) {
                         element.style.position = "relative";
-                        element.style.margin = "10px auto 0px";
+                        element.style.margin = "5px auto 0px";
                         //element.style.marginTop = "10px";
                         element.style.borderSpacing = "30px 0px";
 
@@ -309,54 +319,86 @@
                             element.className = "align-right";
 
                             element.appendChild(UI.create("div", function (element) {
-                                element.appendChild(document.createTextNode("Left: "));
+                                //input.appendChild(document.createTextNode(" %"));
+                                element.appendChild(container.input("text", {
+                                    option: "popup.offsetX",
+                                    on: "keyup",
+                                    text: [ "Left: ", "%" ],
+                                    width: "2.5em"
+                                }));
+                                /*element.appendChild(document.createTextNode("Left: "));
                                 element.appendChild(UI.create("input", function (element) {
                                     element.className = "char4";
 
-                                    Options.on("keyup")("popup.offsetX", element);
-                                }));
-                                element.appendChild(document.createTextNode(" %"));
+                                    Options.on("keyup")(element, {
+                                        option: "popup.offsetX"
+                                    });
+                                }));*/
                             }));
                             element.appendChild(UI.create("div", function (element) {
-                                element.appendChild(document.createTextNode("Top: "));
+                                element.appendChild(container.input("text", {
+                                    option: "popup.offsetY",
+                                    on: "keyup",
+                                    text: [ "Top: ", "%" ],
+                                    width: "2.5em"
+                                }));
+                                /*element.appendChild(document.createTextNode());
                                 element.appendChild(UI.create("input", function (element) {
                                     element.className = "char4";
 
-                                    Options.on("keyup")("popup.offsetY", element);
+                                    Options.on("keyup")(element, {
+                                        option:
+                                    });
                                 }));
-                                element.appendChild(document.createTextNode(" %"));
+                                element.appendChild(document.createTextNode(" %"));*/
                             }));
                         }));
                         element.appendChild(UI.create("td", function (element) {
                             element.className = "align-right";
 
-                            function numberCap(event) {
-                                if (+this.value < 200) {
-                                    Options.set(this.id, (this.value = 200));
-                                }
+                            function numberCap() {
+                                return (+this.value < 200) ? 200 : this.value;
                             }
 
                             element.appendChild(UI.create("div", function (element) {
-                                element.appendChild(document.createTextNode("Width: "));
+                                element.appendChild(container.input("text", {
+                                    option: "popup.width",
+                                    on: "keyup",
+                                    text: [ "Width: ", "px" ],
+                                    width: "3em",
+                                    modify: numberCap
+                                }));
+                                /*element.appendChild(document.createTextNode());
                                 element.appendChild(UI.create("input", function (element) {
                                     element.className = "char5";
-                                    element.id = "popup.width";
+                                    element.id = ;
 
                                     element.addEventListener("change", numberCap, true);
-                                    Options.on("keyup")(element.id, element);
+                                    Options.on("keyup")(element, {
+                                        option: element.id
+                                    });
                                 }));
-                                element.appendChild(document.createTextNode(" px"));
+                                element.appendChild(document.createTextNode(" "));*/
                             }));
                             element.appendChild(UI.create("div", function (element) {
-                                element.appendChild(document.createTextNode("Height: "));
+                                element.appendChild(container.input("text", {
+                                    option: "popup.height",
+                                    on: "keyup",
+                                    text: [ "Height: ", "px" ],
+                                    width: "3em",
+                                    modify: numberCap
+                                }));
+                                /*element.appendChild(document.createTextNode("Height: "));
                                 element.appendChild(UI.create("input", function (element) {
                                     element.className = "char5";
                                     element.id = "popup.height";
 
                                     element.addEventListener("change", numberCap, true);
-                                    Options.on("keyup")(element.id, element);
+                                    Options.on("keyup")(element, {
+                                        option: element.id
+                                    });
                                 }));
-                                element.appendChild(document.createTextNode(" px"));
+                                element.appendChild(document.createTextNode(" "));*/
                             }));
                         }));
                     }));
