More work on Themes and Undo. Also adding in Google Analytics tracking code.

--- a/background.html
+++ b/background.html
@@ -3,6 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <title>Background Page</title>
+
+    <script src="lib/Analytics.js"></script>
 </head>
 <body>
     <script src="lib/Platform.js"></script>
@@ -21,7 +23,15 @@
             "popup.hotkey.ctrl": true,
             "popup.hotkey.shift": true,
             "popup.hotkey.alt": false,
-            "popup.hotkey.letter": "O"
+            "popup.hotkey.letter": "O",
+
+            "undo.new-tab": true,
+            "undo.rename-window": true,
+            "undo.select-tabs": true,
+            "undo.move-tabs": false,
+            "undo.close-tabs": false,
+
+            "color.theme": "blue"
         });
 
         var state = {};
