--- a/window.html
+++ b/window.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" type="text/css" href="lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="window.css" />
+
+    <script src="lib/Analytics.js"></script>
 </head>
 <body>
     <script src="lib/Undo.js"></script>
@@ -17,7 +19,7 @@
     <script src="Tab%20Organizer.js"></script>
     <script>
         "use strict";
-        /*global action, events, Options, Platform, UI, Undo, Window */
+        /*global action, events, Options, Platform, Tab, UI, Undo, Window */
 
         if (Options.get("popup.type") === "bubble") {
             document.body.style.width = Options.get("popup.width") + "px";
@@ -25,6 +27,11 @@
             document.body.style.overflowY = "hidden";
             document.body.style.maxWidth = "100%";
         }
+
+        Undo.setRule("new-tab", function (info) {
+            Platform.tabs.remove(info.id);
+            Undo.reset();
+        });
 
         Undo.setRule("move-tabs", function (info) {
             info.queue.forEach(function (item) {
